--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Bridget Suthersan # your name (or website title) here
-logo: "Screenshot 2020-02-18 at 12.59.02.png?raw=true" # your photo (or logo) here
+logo: "Bridget.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Data Scientist working in the not-for-profit sector.
   <br><br>
