--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Bridget Suthersan # your name (or website title) here
-logo: "/images/WLMapping.png?raw=true" # your photo (or logo) here
+logo: "/images/me.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Data Scientist working in the not-for-profit sector.
   <br><br>
